# ccmtools

ccmtools/: .cvsignore  .jetproperties  AUTHORS  BRANCHES  ChangeLog  ChangeLog-0.2.0  ChangeLog-0.2.1  ChangeLog-0.3.0  ChangeLog-0.3.1  Constants.java.in  INSTALL  Makefile.am  README  README.ant  README.binary  RELEASE  RELEASE-0.2.0  RELEASE-0.2.1  RELEASE-0.2.2  RELEASE-0.2.3  RELEASE-0.3.2  RELEASE-HOWTO  TODO  acinclude.m4  autogen.py  binary-dist.in  build.xml  configure.ac  confix.example  template-info
ccmtools/CCDGenerator/: BasicCCDCreator.java  Makefile.am  corbacomponent.dtd
ccmtools/CodeGenerator/: .cvsignore  CodeGenerator.java  Driver.java  GraphTraverser.java  GraphTraverserImpl.java  Makefile.am  NodeHandler.java  PythonTemplateImpl.java  PythonTemplateManagerImpl.java  Template.java  TemplateHandler.java  TemplateImpl.java  TemplateManager.java  TemplateManagerImpl.java
ccmtools/CppGenerator/: BUGS  CppGenerator.java  CppLocalDbcGeneratorImpl.java  CppLocalGeneratorImpl.java  CppLocalTestGeneratorImpl.java  CppMirrorGeneratorImpl.java  CppPythonGeneratorImpl.java  CppRemoteGeneratorImpl.java  CppRemoteTestGeneratorImpl.java  Makefile.am
ccmtools/CppGenerator/CppLocalDbcTemplates/: MAttributeDefAdapterDefinition  MAttributeDefPrototype  MAttributeDefProvidesDefinition  MAttributeDefProvidesPrototype  MComponentDef  MFactoryDefAdapterDefinition  MFactoryDefAdapterPrototype  MHomeDef  MOperationProvidesAdapterDefinition  MOperationProvidesPrototype  MOperationSupportsAdapterDefinition  MParameterDefAll  MProvidesDefAdapterClass  MProvidesDefAdapterClassImpl  MProvidesDefAdapterVariableInit  MUsesDefAdapterVariableInit  Makefile.am
ccmtools/CppGenerator/CppLocalEnvironment/: Makefile.am
ccmtools/CppGenerator/CppLocalTemplates/: CerrDebugWriterHeader  CerrDebugWriterImpl  Confix  DebugHeader  DebugImpl  DebugWriterHeader  DebugWriterManagerHeader  DebugWriterManagerImpl  HomeFinderHeader  HomeFinderImpl  LinkAssertHeader  LocalComponentsHeader  LocalTransactionHeader  MAliasDef  MAttributeDefAdapterDefinition  MAttributeDefImplDefinition  MAttributeDefPrototype  MAttributeDefPrototypeVV  MAttributeDefVariable  MAttributeProvidesAdapterDefinition  MAttributeProvidesAdapterImplDefinition  MAttributeProvidesPrototype  MAttributeSupportsAdapterDefinition  MAttributeSupportsImplDefinition  MAttributeSupportsPrototype  MAttributeSupportsPrototypeVV  MComponentDef  MConsumesDefInclude  MContainer  MEmitsDefInclude  MEnumDef  MEnumDefFwdDecl  MExceptionDef  MExceptionDefClass  MExceptionDefInclude  MFactoryDefAdapterDefinition  MFactoryDefAdapterPrototypeV  MFactoryDefAdapterPrototypeVV  MFactoryDefImplDefinition  MFactoryDefPrototypeV  (+66 more)
ccmtools/CppGenerator/CppLocalTestTemplates/: MComponentDef  MProvidesDefConnect  MProvidesDefCookie  MProvidesDefCreate  MProvidesDefDisconnect  MProvidesDefVariable  MUsesDefConnect  MUsesDefConnectMultiple  MUsesDefCookieMultiple  MUsesDefCreate  MUsesDefCreateMultiple  MUsesDefDisconnect  MUsesDefDisconnectMultiple  MUsesDefVariable  Makefile.am
ccmtools/CppGenerator/CppMirrorTemplates/: MAttributeDef  MComponentDef  MOperationProvidesTest  MOperationSupportsTest  MOperationUsesTest  MOperationUsesTestMultiple  MProvidesDefComponentCreate  MProvidesDefComponentDestroy  MProvidesDefConfComplete  MProvidesDefConnect  MProvidesDefDisconnect  MProvidesDefFacetCreate  MProvidesDefTest  MSupportsDef  MUsesDefComponentCreate  MUsesDefComponentCreateMultiple  MUsesDefComponentDestroy  MUsesDefComponentDestroyMultiple  MUsesDefConfComplete  MUsesDefConfCompleteMultiple  MUsesDefConnect  MUsesDefConnectMultiple  MUsesDefDisconnect  MUsesDefDisconnectMultiple  MUsesDefFacetCreate  MUsesDefFacetCreateMultiple  MUsesDefTest  MUsesDefTestMultiple  MUsesDefVariableMultiple  Makefile.am
ccmtools/CppGenerator/CppPythonTemplates/: BoostPythonMakefile  CallPythonHeader  CallPythonImpl  ConvertPrimitivesHeader  MAliasDef  (+38 more)
ccmtools/GObjectGenerator/: GObjectGenerator.java
ccmtools/IDL3Parser/: .cvsignore  DeclaratorHelper.java  IDL3SymbolTable.java  Makefile.am  ParserManager.java  idl3.g
ccmtools/IDLGenerator/: IDL2GeneratorImpl.java  IDL3GeneratorImpl.java  IDL3MirrorGeneratorImpl.java  IDLGenerator.java  Makefile.am
ccmtools/MDR/: Makefile.am  README
ccmtools/Metamodel/: Makefile.am
ccmtools/OCL/: Makefile.am  package.html
ccmtools/PythonGenerator/: Makefile.am  PythonGenerator.java  PythonLocalGeneratorImpl.java
ccmtools/UI/: ConsoleCodeGenerator.java  ConsoleDriverImpl.java  ConsoleEnvironmentImpl.java  Environment.java  Makefile.am
ccmtools/debian/: ccmtools-generate.1  ccmtools.docs  ccmtools.postinst.debhelper  ccmtools.prerm.debhelper  changelog  control  copyright  doc-base.devmanual  doc-base.tutorial  files  files.in  rules
ccmtools/doc/: .cvsignore  Makefile.am  convert-for-website.sh  roadmap.fig
ccmtools/dtd2java/: ClassTable.java  DTDTokenTypes.java  DtdAttribute.java  DtdBar.java  DtdClass.java  DtdComma.java  DtdConstant.java  DtdFile.java  DtdGenerator.java  DtdLexer.java  DtdName.java  DtdNotation.java  DtdParser.java  DtdPreprocessor.java  Main.java  make_UML.sh  make_tool.sh  package.html
ccmtools/environment/: .cvsignore  README
ccmtools/etc/: ccmtools.properties  logging.properties
ccmtools/lib/: .cvsignore  Makefile.am
ccmtools/test/: .cvsignore  CcmtoolsTestCase.java  CcmtoolsTestCaseException.java  Makefile.am
ccmtools/uml2idl/: Factory.java  IdlContainer.java  Main.java  UmlAssociation.java  UmlAssociationConnection.java  UmlAssociationEnd.java  UmlAttribute.java  UmlClass.java  UmlClassifierFeature.java  UmlConstraint.java  UmlDataType.java  UmlDependency.java  UmlExpression.java  UmlGeneralization.java  UmlModel.java  UmlModelElementName.java  UmlModelElementStereotype.java  UmlModelElementTaggedValue.java  UmlMultiplicity.java  UmlMultiplicityRange.java  UmlNamespaceElement.java  UmlOperation.java  UmlPackage.java  UmlParameter.java  UmlStereotype.java  UmlTagDefinition.java  UmlTaggedValue.java  Worker.java  make_tool.sh  run.sh
ccmtools/utils/: .cvsignore  Debug.java  Makefile.am
(+5309 files in other folders)
