## process this file with automake to produce Makefile.in
## $Id$

CLASSPATH_ENV = CLASSPATH=$(top_builddir)

dist_noinst_DATA = \
    CodeGenerator.java       \
    Driver.java              \
    GraphTraverserImpl.java  \
    GraphTraverser.java      \
    NodeHandler.java         \
    TemplateHandler.java     \
    TemplateImpl.java        \
    Template.java            \
    TemplateManagerImpl.java \
    TemplateManager.java

noinst_JAVA = $(dist_noinst_DATA)
