## process this file with automake to produce Makefile.in
## $Id$

templatedir = $(TEMPLATE_ROOT)/CppLocalDbcTemplates
dist_template_DATA = \
    MContainer                          \
    MComponentDef                       \
    MOperationProvidesAdapterDefinition \
    MOperationProvidesPrototype         \
    MProvidesDefAdapterClass            \
    MProvidesDefAdapterClassImpl        \
    MProvidesDefAdapterVariableInit	\
    MUsesDefAdapterVariableInit         \
    MHomeDef                            \
    MExceptionDef                       \
    MAttributeDefPrototype              \
    MAttributeDefAdapterDefinition      \
    MSupportsDefAdapterPrototype        \
    MOperationSupportsPrototype         \
    MSupportsDefAdapterImplDefinition   \
    MOperationSupportsAdapterDefinition \
    MFactoryDefAdapterPrototype         \
    MFactoryDefAdapterDefinition        \
    MParameterDefAll                    \
    MParameterDefName