## process this file with automake to produce Makefile.in

#templatedir = $(DATA_ROOT)/CppLocalDbcTemplates
templatedir = $(TEMPLATE_ROOT)/CppLocalDbcTemplates
dist_template_DATA = \
    MContainer                          \
    MComponentDef                       \
    MOperationProvidesAdapterDefinition \
    MOperationProvidesPrototype         \
    MProvidesDefAdapterClass            \
    MProvidesDefAdapterClassImpl        \
    MProvidesDefAdapterVariableInit	    \
    MUsesDefAdapterVariableInit         \
    MHomeDef                            \
    MExceptionDef                       \
    MAttributeDefPrototype              \
    MAttributeDefAdapterDefinition      \
    MSupportsDefAdapterPrototype        \
    MOperationSupportsPrototype         \
    MSupportsDefAdapterImplDefinition   \
    MOperationSupportsAdapterDefinition \
    MFactoryDefAdapterPrototype         \
    MFactoryDefAdapterDefinition        \
    MParameterDefAll                    \
    MParameterDefName
