## process this file with automake to produce Makefile.in
## $Id$

templatedir = $(TEMPLATE_ROOT)/CppLocalGenerator
dist_template_DATA = \
    Blank                                          \
    CerrDebugWriterHeader                          \
    CerrDebugWriterImpl                            \
    Confix                                         \
    DebugHeader                                    \
    DebugImpl                                      \
    DebugWriterHeader                              \
    DebugWriterManagerHeader                       \
    DebugWriterManagerImpl                         \
    HomeFinderHeader                               \
    HomeFinderImpl                                 \
    LinkAssertHeader                               \
    LocalComponentsHeader                          \
    LocalTransactionHeader                         \
    MAliasDef                                      \
    MAttributeDefAdapterDefinition                 \
    MAttributeDefImplDefinition                    \
    MAttributeDefPrototype                         \
    MAttributeDefPrototypeVV                       \
    MAttributeDefVariable                          \
    MComponentDef                                  \
    MConsumesDefInclude                            \
    MContainer                                     \
    MEmitsDefInclude                               \
    MEnumDef                                       \
    MEnumDefFwdDecl                                \
    MExceptionDef                                  \
    MExceptionDefClass                             \
    MFactoryDefAdapterDefinition                   \
    MFactoryDefAdapterPrototypeV                   \
    MFactoryDefAdapterPrototypeVV                  \
    MFactoryDefImplDefinition                      \
    MFactoryDefPrototypeV                          \
    MFactoryDefPrototypeVV                         \
    MFieldDef                                      \
    MHomeDef                                       \
    MInterfaceDef                                  \
    MOperationDefPrototypeVV                       \
    MOperationProvidesAdapterDefinition            \
    MOperationProvidesAdapterImplDefinition        \
    MOperationProvidesPrototype                    \
    MOperationSupportsAdapterDefinition            \
    MOperationSupportsImplDefinition               \
    MOperationSupportsPrototype                    \
    MOperationSupportsPrototypeVV                  \
    MParameterDefAll                               \
    MParameterDefName                              \
    MProvidesDefAdapterClass                       \
    MProvidesDefAdapterClassImpl                   \
    MProvidesDefAdapterDefinition                  \
    MProvidesDefAdapterImplClass                   \
    MProvidesDefAdapterImplClassImpl               \
    MProvidesDefAdapterVariable                    \
    MProvidesDefAdapterVariableInit                \
    MProvidesDefGetFacetDefinition                 \
    MProvidesDefGetFacetPrototype                  \
    MProvidesDefGetFacetPrototypeVV                \
    MProvidesDefImplRemove                         \
    MProvidesDefInclude                            \
    MProvidesDefProvideFacet                       \
    MProvidesDefProvidePrototype                   \
    MPublishesDefInclude                           \
    MStructDef                                     \
    MStructDefFwdDecl                              \
    MSupportsDefAdapterImplDefinition              \
    MSupportsDefAdapterPrototype                   \
    MSupportsDefBase                               \
    MSupportsDefImplDefinition                     \
    MSupportsDefImplPrototype                      \
    MSupportsDefImplPrototypeVV                    \
    MSupportsDefInclude                            \
    MUnionDef                                      \
    MUnionDefFwdDecl                               \
    MUnionFieldDef                                 \
    MUsesDefAdapterDefinition                      \
    MUsesDefAdapterDefinitionMultiple              \
    MUsesDefAdapterVariable                        \
    MUsesDefAdapterVariableInit                    \
    MUsesDefAdapterVariableInitMultiple            \
    MUsesDefAdapterVariableMultiple                \
    MUsesDefConnectFacet                           \
    MUsesDefConnectFacetMultiple                   \
    MUsesDefConnectPrototype                       \
    MUsesDefConnectPrototypeMultiple               \
    MUsesDefDisconnectFacet                        \
    MUsesDefDisconnectFacetMultiple                \
    MUsesDefGetConnectionCtxImplDefinition         \
    MUsesDefGetConnectionCtxImplDefinitionMultiple \
    MUsesDefGetConnectionPrototype                 \
    MUsesDefGetConnectionPrototypeMultiple         \
    MUsesDefGetConnectionPrototypeVV               \
    MUsesDefGetConnectionPrototypeVVMultiple       \
    MUsesDefInclude                                \
    MUsesDefIncludeMultiple                        \
    PackageMakefile                                \
    SmartPointerHeader                             \
    SmartPointerImpl

