## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/CppLocalTemplates
dist_template_DATA = \
    Blank                                          \
    CerrDebugWriterHeader                          \
    CerrDebugWriterImpl                            \
    Confix                                         \
    DebugHeader                                    \
    DebugImpl                                      \
    DebugWriterHeader                              \
    DebugWriterManagerHeader                       \
    DebugWriterManagerImpl                         \
    HomeFinderHeader                               \
    HomeFinderImpl                                 \
    LinkAssertHeader                               \
    LocalComponentsHeader                          \
    LocalTransactionHeader                         \
    MAliasDef                                      \
    MAttributeDefAdapterDefinition                 \
    MAttributeDefImplDefinition                    \
    MAttributeDefInclude                           \
    MAttributeDefPrototype                         \
    MAttributeDefPrototypeVV                       \
    MAttributeDefVariable                          \
    MComponentDef                                  \
    MConsumesDefInclude                            \
    MConstantDefInclude                            \
    MEmitsDefInclude                               \
    MEnumDef                                       \
    MExceptionDef                                  \
    MExceptionDefThrows                            \
    MFactoryDefAdapterDefinition                   \
    MFactoryDefAdapterPrototypeV                   \
    MFactoryDefAdapterPrototypeVV                  \
    MFactoryDefImplDefinition                      \
    MFactoryDefInclude                             \
    MFactoryDefPrototypeV                          \
    MFactoryDefPrototypeVV                         \
    MFieldDef                                      \
    MFieldDefInclude                               \
    MFinderDefInclude                              \
    MHomeDef                                       \
    MInterfaceDef                                  \
    MOperationDefPrototypeVV                       \
    MOperationDefInclude                           \
    MOperationProvidesAdapterDefinition            \
    MOperationProvidesAdapterImplDefinition        \
    MOperationProvidesPrototype                    \
    MOperationSupportsAdapterDefinition            \
    MOperationSupportsImplDefinition               \
    MOperationSupportsPrototype                    \
    MOperationSupportsPrototypeVV                  \
    MParameterDefAll                               \
    MParameterDefInclude                           \
    MParameterDefName                              \
    MProvidesDefAdapterClass                       \
    MProvidesDefAdapterClassImpl                   \
    MProvidesDefAdapterDefinition                  \
    MProvidesDefAdapterImplClass                   \
    MProvidesDefAdapterImplClassImpl               \
    MProvidesDefAdapterVariable                    \
    MProvidesDefAdapterVariableInit                \
    MProvidesDefGetFacetDefinition                 \
    MProvidesDefGetFacetPrototype                  \
    MProvidesDefGetFacetPrototypeVV                \
    MProvidesDefImplRemove                         \
    MProvidesDefInclude                            \
    MProvidesDefProvideFacet                       \
    MProvidesDefProvidePrototype                   \
    MPublishesDefInclude                           \
    MStructDef                                     \
    MSupportsDefAdapterImplDefinition              \
    MSupportsDefAdapterPrototype                   \
    MSupportsDefBase                               \
    MSupportsDefImplDefinition                     \
    MSupportsDefImplPrototype                      \
    MSupportsDefImplPrototypeVV                    \
    MSupportsDefInclude                            \
    MUnionDef                                      \
    MUnionFieldDef                                 \
    MUnionFieldDefInclude                          \
    MUsesDefAdapterDefinition                      \
    MUsesDefAdapterDefinitionMultiple              \
    MUsesDefAdapterVariable                        \
    MUsesDefAdapterVariableInit                    \
    MUsesDefAdapterVariableInitMultiple            \
    MUsesDefAdapterVariableMultiple                \
    MUsesDefConnectFacet                           \
    MUsesDefConnectFacetMultiple                   \
    MUsesDefConnectPrototype                       \
    MUsesDefConnectPrototypeMultiple               \
    MUsesDefDisconnectFacet                        \
    MUsesDefDisconnectFacetMultiple                \
    MUsesDefGetConnectionCtxImplDefinition         \
    MUsesDefGetConnectionCtxImplDefinitionMultiple \
    MUsesDefGetConnectionPrototype                 \
    MUsesDefGetConnectionPrototypeMultiple         \
    MUsesDefGetConnectionPrototypeVV               \
    MUsesDefGetConnectionPrototypeVVMultiple       \
    MUsesDefInclude                                \
    MUsesDefIncludeMultiple                        \
    SmartPointerHeader                             \
    SmartPointerImpl

