## process this file with automake to produce Makefile.in

#templatedir = $(DATA_ROOT)/CppLocalTemplates
templatedir = $(TEMPLATE_ROOT)/CppLocalTemplates
dist_template_DATA = \
    MAliasDef                                      \
    MAttributeDefAdapterDefinition                 \
    MAttributeDefImplDefinition                    \
    MAttributeDefInclude                           \
    MAttributeDefPrototype                         \
    MAttributeDefPrototypeVV                       \
    MAttributeDefVariable                          \
    MAttributeProvidesAdapterDefinition            \
    MAttributeProvidesAdapterImplDefinition        \
    MAttributeProvidesPrototype                    \
    MAttributeSupportsAdapterDefinition            \
    MAttributeSupportsImplDefinition               \
    MAttributeSupportsPrototype                    \
    MAttributeSupportsPrototypeVV                  \
    MComponentDef                                  \
    MConsumesDefInclude                            \
    MConstantDefInclude                            \
    MEmitsDefInclude                               \
    MEnumDef                                       \
    MExceptionDef                                  \
    MExceptionDefInclude                           \
    MExceptionDefThrows                            \
    MFactoryDefAdapterDefinition                   \
    MFactoryDefAdapterPrototypeV                   \
    MFactoryDefAdapterPrototypeVV                  \
    MFactoryDefImplDefinition                      \
    MFactoryDefInclude                             \
    MFactoryDefPrototypeV                          \
    MFactoryDefPrototypeVV                         \
    MFieldDef                                      \
    MFieldDefInclude                               \
    MFinderDefInclude                              \
    MHomeDef                                       \
    MInterfaceDef                                  \
    MOperationDefPrototypeVV                       \
    MOperationDefInclude                           \
    MOperationProvidesAdapterDefinition            \
    MOperationProvidesAdapterImplDefinition        \
    MOperationProvidesPrototype                    \
    MOperationSupportsAdapterDefinition            \
    MOperationSupportsImplDefinition               \
    MOperationSupportsPrototype                    \
    MOperationSupportsPrototypeVV                  \
    MParameterDefAll                               \
    MParameterDefInclude                           \
    MParameterDefName                              \
    MProvidesDefAdapterClass                       \
    MProvidesDefAdapterClassImpl                   \
    MProvidesDefAdapterDefinition                  \
    MProvidesDefAdapterImplClass                   \
    MProvidesDefAdapterImplClassImpl               \
    MProvidesDefAdapterVariable                    \
    MProvidesDefAdapterVariableInit                \
    MProvidesDefAdapterVariableInitDefault         \
    MProvidesDefGetFacetDefinition                 \
    MProvidesDefGetFacetPrototype                  \
    MProvidesDefGetFacetPrototypeVV                \
    MProvidesDefImplRemove                         \
    MProvidesDefInclude                            \
    MProvidesDefProvideFacet                       \
    MProvidesDefProvidePrototype                   \
    MPublishesDefInclude                           \
    MStructDef                                     \
    MSupportsDefAdapterImplDefinition              \
    MSupportsDefAdapterPrototype                   \
    MSupportsDefBase                               \
    MSupportsDefImplDefinition                     \
    MSupportsDefImplPrototype                      \
    MSupportsDefImplPrototypeVV                    \
    MSupportsDefInclude                            \
    MUnionDef                                      \
    MUnionFieldDef                                 \
    MUnionFieldDefInclude                          \
    MUsesDefAdapterDefinition                      \
    MUsesDefAdapterDefinitionMultiple              \
    MUsesDefAdapterVariable                        \
    MUsesDefAdapterVariableInit                    \
    MUsesDefAdapterVariableInitDefault             \
    MUsesDefAdapterVariableInitDefaultMultiple     \
    MUsesDefAdapterVariableInitMultiple            \
    MUsesDefAdapterVariableMultiple                \
    MUsesDefConnectFacet                           \
    MUsesDefConnectFacetMultiple                   \
    MUsesDefConnectPrototype                       \
    MUsesDefGetCtxConnectionPrototype              \
    MUsesDefGetCtxConnectionPrototypeMultiple      \
    MUsesDefConnectPrototypeMultiple               \
    MUsesDefDisconnectFacet                        \
    MUsesDefDisconnectFacetMultiple                \
    MUsesDefGetConnectionCtxImplDefinition         \
    MUsesDefGetConnectionCtxImplDefinitionMultiple \
    MUsesDefGetConnectionPrototype                 \
    MUsesDefGetConnectionPrototypeMultiple         \
    MUsesDefGetConnectionPrototypeVV               \
    MUsesDefGetConnectionPrototypeVVMultiple       \
    MUsesDefInclude                                \
    MUsesDefIncludeMultiple

