## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/CppMirrorTemplates
dist_template_DATA = \
    MAttributeDef                    \
    MComponentDef                    \
    MOperationProvidesTest           \
    MOperationSupportsTest           \
    MOperationUsesTest               \
    MOperationUsesTestMultiple       \
    MProvidesDefComponentCreate      \
    MProvidesDefComponentDestroy     \
    MProvidesDefConfComplete         \
    MProvidesDefConnect              \
    MProvidesDefDisconnect           \
    MProvidesDefFacetCreate          \
    MProvidesDefTest                 \
    MSupportsDef                     \
    MUsesDefComponentCreate          \
    MUsesDefComponentCreateMultiple  \
    MUsesDefComponentDestroy         \
    MUsesDefComponentDestroyMultiple \
    MUsesDefConfComplete             \
    MUsesDefConfCompleteMultiple     \
    MUsesDefConnect                  \
    MUsesDefConnectMultiple          \
    MUsesDefDisconnect               \
    MUsesDefDisconnectMultiple       \
    MUsesDefFacetCreate              \
    MUsesDefFacetCreateMultiple      \
    MUsesDefTest                     \
    MUsesDefTestMultiple
