## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/CppMirrorTemplates
dist_template_DATA = \
    MComponentDef                    \
    MProvidesDefConnect              \
    MProvidesDefDisconnect           \
    MProvidesDefFacetCreate          \
    MUsesDefConnect                  \
    MUsesDefConnectMultiple          \
    MUsesDefDisconnect               \
    MUsesDefDisconnectMultiple       \
    MUsesDefFacetCreate              \
    MUsesDefFacetCreateMultiple
