## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/CppMirrorTemplates
dist_template_DATA = \
    MComponentDef                    \
    MProvidesDefConnect              \
    MProvidesDefCookie               \
    MProvidesDefCreate               \
    MProvidesDefDisconnect           \
    MProvidesDefVariable             \
    MUsesDefConnect                  \
    MUsesDefConnectMultiple          \
    MUsesDefCookie                   \
    MUsesDefCookieMultiple           \
    MUsesDefCreate                   \
    MUsesDefCreateMultiple           \
    MUsesDefDisconnect               \
    MUsesDefDisconnectMultiple       \
    MUsesDefVariable                 \
    MUsesDefVariableMultiple
