## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/CppPythonTemplates
dist_template_DATA = \
  Blank                         \
  CallPythonHeader              \
  CallPythonImpl                \
  ConvertPrimitivesHeader       \
  ConvertPrimitivesImpl         \
  MAliasDef                     \
  MAliasDefArray                \
  MAliasDefNormal               \
  MAliasDefSequence             \
  MAttributeDefInclude          \
  MComponentDef                 \
  MConstantDefInclude           \
  MConsumesDefInclude           \
  MEmitsDefInclude              \
  MEnumDef                      \
  MExceptionDef                 \
  MExceptionDefInclude          \
  MFactoryDefInclude            \
  MFieldDefFree                 \
  MFieldDefFrom                 \
  MFieldDefFromPointer          \
  MFieldDefInclude              \
  MFieldDefInit                 \
  MFieldDefInitVariable         \
  MFieldDefKeyword              \
  MFieldDefKeywordVariable      \
  MFieldDefMember               \
  MFieldDefTo                   \
  MFieldDefVariable             \
  MFinderDefInclude             \
  MOperationDefInclude          \
  MOperationDefMethod           \
  MOperationDefWrapper          \
  MOperationProvides            \
  MOperationSupports            \
  MParameterDefInclude          \
  MProvidesDef                  \
  MProvidesDefInclude           \
  MPublishesDefInclude          \
  MStructDef                    \
  MSupportsDef                  \
  MSupportsDefInclude           \
  MUnionDef                     \
  MUnionFieldDefFree            \
  MUnionFieldDefFrom            \
  MUnionFieldDefFromPointer     \
  MUnionFieldDefInclude         \
  MUnionFieldDefInit            \
  MUnionFieldDefInitVariable    \
  MUnionFieldDefKeyword         \
  MUnionFieldDefKeywordVariable \
  MUnionFieldDefMember          \
  MUnionFieldDefTo              \
  MUnionFieldDefVariable        \
  MUsesDefInclude               \
  MUsesDefIncludeMultiple       \
  PythonMakefile

