## process this file with automake to produce Makefile.in

#templatedir = $(DATA_ROOT)/CppPythonTemplates
templatedir = $(TEMPLATE_ROOT)/CppPythonTemplates
dist_template_DATA = \
  MAliasDef                     \
  MAliasDefArray                \
  MAliasDefNormal               \
  MAliasDefSequence             \
  MAttributeDefInclude          \
  MAttributeDefMethod           \
  MAttributeDefWrapper          \
  MComponentDef                 \
  MConstantDefInclude           \
  MConsumesDefInclude           \
  MEmitsDefInclude              \
  MEnumDef                      \
  MExceptionDef                 \
  MExceptionDefInclude          \
  MFactoryDefInclude            \
  MFieldDefFree                 \
  MFieldDefFrom                 \
  MFieldDefFromPointer          \
  MFieldDefInclude              \
  MFieldDefInit                 \
  MFieldDefInitVariable         \
  MFieldDefKeyword              \
  MFieldDefKeywordVariable      \
  MFieldDefMember               \
  MFieldDefTo                   \
  MFieldDefVariable             \
  MFinderDefInclude             \
  MHomeDef                      \
  MInterfaceDef                 \
  MOperationDefInclude          \
  MOperationDefMethod           \
  MOperationDefWrapper          \
  MOperationProvides            \
  MOperationSupports            \
  MParameterDefAll              \
  MParameterDefName             \
  MParameterDefInclude          \
  MProvidesDef                  \
  MProvidesDefInclude           \
  MPublishesDefInclude          \
  MStructDef                    \
  MSupportsDef                  \
  MSupportsDefInclude           \
  MUnionDef                     \
  MUnionFieldDefFree            \
  MUnionFieldDefFrom            \
  MUnionFieldDefFromPointer     \
  MUnionFieldDefInclude         \
  MUnionFieldDefInit            \
  MUnionFieldDefInitVariable    \
  MUnionFieldDefKeyword         \
  MUnionFieldDefKeywordVariable \
  MUnionFieldDefMember          \
  MUnionFieldDefTo              \
  MUnionFieldDefVariable        \
  MUsesDefInclude               \
  MUsesDefIncludeMultiple
