## process this file with automake to produce Makefile.in
## $Id$

templatedir = $(TEMPLATE_ROOT)/CppRemoteTemplates
dist_template_DATA = \
    Blank                 \
    CCMContainerHeader    \
    CCMContainerImpl      \
    ComponentsIdl         \
    ConvertRemoteHeader   \
    MContainer            \
    MHomeDef              \
    MComponentDef         



