## process this file with automake to produce Makefile.in
## $Id$

templatedir = $(TEMPLATE_ROOT)/CppRemoteTemplates
dist_template_DATA = \
    Blank                 \
    CCMContainerHeader    \
    CCMContainerImpl      \
    ComponentsIdl         \
    ConvertRemoteHeader   \
    MContainer            \
    MHomeDef              \
    MFactoryDefHeader     \
    MFactoryDefImpl       \
    MFinderDefHeader      \
    MFinderDefImpl        \
    MParameterDefHeader   \
    MComponentDef         \
    MSupportsDefInclude   \
    MProvidesDefInclude   \
    MUsesDefInclude       \
    MConsumesDefInclude   \
    MEmitsDefInclude      \
    MPublishesDefInclude  \
    MAttributeDefEqInterfaceHeader   \
    MProvidesDefFriend    \
    MProvidesDefAdapterVariable \
    MUsesDefAdapterVariable \
    MSupportsDefEqInterfaceHeader\
    MOperationSupportsHeader \
    MExceptionDef   \
    MProvidesDefEqInterfaceHeader \
    MProvidesDefAdapterHeader \
    MOperationProvidesPrototype \
    MOperationUsesPrototype \
    MUsesDefEqInterfaceHeader \
    MUsesDefAdapterHeader  \
    MUsesDefGetAdapterHeader \
    MUsesDefGetLocalAdapterHeader\
    MUsesDefLocalAdapterHeader




